[gd_scene load_steps=27 format=3 uid="uid://q87lwpgvr60v"]

[ext_resource type="Script" path="res://tasks/ballista.gd" id="1_54ixe"]
[ext_resource type="Texture2D" uid="uid://djt7ktkw3m0rt" path="res://assets/images/tasks/ballista_base.png" id="1_qum3j"]
[ext_resource type="PackedScene" uid="uid://cmb3q44xx1byi" path="res://items/item.tscn" id="2_8ybxy"]
[ext_resource type="Texture2D" uid="uid://cjhqnnmatg4al" path="res://assets/images/tasks/ballista_shooter.png" id="2_o035k"]
[ext_resource type="Texture2D" uid="uid://cc775l8k5duht" path="res://assets/images/tasks/strings/string1.png" id="4_c8y8i"]
[ext_resource type="Script" path="res://tasks/holder1.gd" id="4_nf7gm"]
[ext_resource type="Texture2D" uid="uid://batm0w1xmsa3s" path="res://assets/images/tasks/wheel.png" id="5_2y1ik"]
[ext_resource type="Script" path="res://tasks/holder2.gd" id="5_yfqy7"]
[ext_resource type="Script" path="res://tasks/shooter.gd" id="6_pnnox"]
[ext_resource type="Texture2D" uid="uid://c14ltlbctiuel" path="res://assets/images/tasks/line_texture.png" id="9_21wvs"]
[ext_resource type="AudioStream" uid="uid://ddt5pf03dthmg" path="res://assets/sound_effects/ballista_crank.mp3" id="11_fd0e8"]
[ext_resource type="AudioStream" uid="uid://t2ab4n1vwyen" path="res://assets/sound_effects/ballista_fire.mp3" id="12_65qh7"]

[sub_resource type="Curve" id="Curve_cfvqn"]
_data = [Vector2(0, 0), 0.0, 3.30586, 0, 0, Vector2(0.394737, 1), 1.98849, -1.16677, 0, 0, Vector2(1, 0.296703), -1.04396, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_dnee5"]
_data = [Vector2(0, 0), 0.0, 0.811966, 0, 0, Vector2(0.963158, 0.791209), 0.782967, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3h75"]
size = Vector2(104, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxfmo"]
size = Vector2(32, 36.525)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dx1h7"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rkas"]
size = Vector2(6, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8x3u"]
size = Vector2(18, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fluat"]
size = Vector2(11, 9)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_piegy"]
radius = 7.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2yilk"]
radius = 24.22
height = 84.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vkhjh"]
radius = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ne0i0"]
size = Vector2(12, 25)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eoh7q"]
height = 25.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22vti"]
size = Vector2(368, 127.895)

[node name="ballista" type="StaticBody2D"]
z_index = -2
position = Vector2(3.78, 0)
script = ExtResource("1_54ixe")
item_scene = ExtResource("2_8ybxy")
hit_curve = SubResource("Curve_cfvqn")
miss_curve = SubResource("Curve_dnee5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_qum3j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 34)
shape = SubResource("RectangleShape2D_f3h75")

[node name="CrankSlot" type="Area2D" parent="."]
position = Vector2(-3, 39)
collision_layer = 17
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrankSlot"]
position = Vector2(-0.78, 6.7375)
shape = SubResource("RectangleShape2D_gxfmo")

[node name="holder1" type="StaticBody2D" parent="."]
position = Vector2(-67.78, 36)
script = ExtResource("4_nf7gm")

[node name="Area2D" type="Area2D" parent="holder1"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="holder1/Area2D"]
position = Vector2(0.220001, 0)
shape = SubResource("RectangleShape2D_dx1h7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="holder1"]
position = Vector2(8.22, 0)
shape = SubResource("RectangleShape2D_1rkas")

[node name="holder2" type="StaticBody2D" parent="."]
position = Vector2(68.22, 36)
script = ExtResource("5_yfqy7")

[node name="Area2D" type="Area2D" parent="holder2"]
position = Vector2(15.22, 36)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="holder2/Area2D"]
position = Vector2(-15.22, -37)
shape = SubResource("RectangleShape2D_l8x3u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="holder2"]
position = Vector2(-9, -1)
shape = SubResource("RectangleShape2D_fluat")

[node name="shooter" type="Area2D" parent="."]
z_index = 5
position = Vector2(-4, 35)
script = ExtResource("6_pnnox")

[node name="Sprite2D" type="Sprite2D" parent="shooter"]
texture_filter = 1
position = Vector2(3, -33)
texture = ExtResource("2_o035k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="shooter"]
position = Vector2(0, -22)
shape = SubResource("CapsuleShape2D_piegy")
disabled = true

[node name="String" type="Sprite2D" parent="shooter"]
texture_filter = 1
position = Vector2(3, -33)
texture = ExtResource("4_c8y8i")

[node name="LoadingArea" type="Area2D" parent="shooter"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="shooter/LoadingArea"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_2yilk")

[node name="LaunchingNode" type="Node2D" parent="shooter"]
position = Vector2(0, -9)

[node name="Line2D" type="Line2D" parent="shooter"]
visible = false
z_index = 10
texture_filter = 1
texture_repeat = 2
position = Vector2(0, -45)
points = PackedVector2Array(0.22, 2, 0.22, -310)
width = 0.545
default_color = Color(0.374139, 0.374139, 0.374139, 1)
texture = ExtResource("9_21wvs")
texture_mode = 1
round_precision = 1
metadata/_edit_group_ = true

[node name="RayCast2D" type="RayCast2D" parent="shooter"]
position = Vector2(0, -39)
target_position = Vector2(0, -500)
collision_mask = 128
collide_with_areas = true

[node name="Wheel" type="StaticBody2D" parent="."]
position = Vector2(-44, 45)
metadata/_edit_group_ = true

[node name="Wheel" type="Sprite2D" parent="Wheel"]
texture_filter = 1
position = Vector2(44, -46)
texture = ExtResource("5_2y1ik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel"]
shape = SubResource("CircleShape2D_vkhjh")

[node name="Wheel2" type="StaticBody2D" parent="."]
z_index = -1
position = Vector2(-50, 38)
metadata/_edit_group_ = true

[node name="Wheel" type="Sprite2D" parent="Wheel2"]
texture_filter = 1
position = Vector2(43, -46)
texture = ExtResource("5_2y1ik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel2"]
position = Vector2(-1, -2.5)
shape = SubResource("RectangleShape2D_ne0i0")

[node name="Wheel3" type="StaticBody2D" parent="."]
z_index = -1
position = Vector2(35, 36)
metadata/_edit_group_ = true

[node name="Wheel" type="Sprite2D" parent="Wheel3"]
texture_filter = 1
position = Vector2(44, -45)
texture = ExtResource("5_2y1ik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel3"]
position = Vector2(0, -2.5)
shape = SubResource("CapsuleShape2D_eoh7q")

[node name="Wheel4" type="StaticBody2D" parent="."]
position = Vector2(41, 44)
metadata/_edit_group_ = true

[node name="Wheel" type="Sprite2D" parent="Wheel4"]
texture_filter = 1
position = Vector2(44, -46)
texture = ExtResource("5_2y1ik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel4"]
shape = SubResource("CircleShape2D_vkhjh")

[node name="CrankSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="item_spawn_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_spawn_area"]
position = Vector2(236.22, 176)
shape = SubResource("RectangleShape2D_22vti")

[node name="CrankSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_fd0e8")
volume_db = -10.0

[node name="FireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_65qh7")
volume_db = -8.0

[connection signal="timeout" from="CrankSpawnTimer" to="." method="spawn_crank"]
